Add assessment of thermal efficiency for an intercooled Brayton Cycle

--- a/dashboard/main_db.ipynb
+++ b/dashboard/main_db.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "21d6ec26",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "7239163b",
    "metadata": {},
    "outputs": [],
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "3a256a92",
    "metadata": {},
    "outputs": [],
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "4e3e64b4",
    "metadata": {},
    "outputs": [],
@@ -1103,9 +1103,9 @@
     "        p.xaxis.major_label_text_font_size = \"0pt\"\n",
     "\n",
     "        # Plot years as text and add to layout\n",
-    "        start = Label(x=5, y=0, x_units='screen', y_units='screen', text=str(start_year), text_font_size='12pt',  text_color='black')\n",
-    "        middle = Label(x=270, y=0, x_units='screen', y_units='screen', text=str(middle_year), text_font_size='12pt', text_color='black')\n",
-    "        end = Label(x=530, y=0, x_units='screen', y_units='screen', text=str(end_year), text_font_size='12pt', text_color='black')\n",
+    "        start = Label(x=8, y=3, x_units='screen', y_units='screen', text=str(start_year), text_font_size='12pt',  text_color='black')\n",
+    "        middle = Label(x=370, y=3, x_units='screen', y_units='screen', text=str(middle_year), text_font_size='12pt', text_color='black')\n",
+    "        end = Label(x=727, y=3, x_units='screen', y_units='screen', text=str(end_year), text_font_size='12pt', text_color='black')\n",
     "        p.add_layout(start)\n",
     "        p.add_layout(middle)\n",
     "        p.add_layout(end)\n",
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad20e6a",
+   "id": "a7b996c6",
    "metadata": {},
    "source": [
     "# Overall Efficiency"
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "865e3b42",
    "metadata": {},
    "outputs": [],
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "3058b388",
    "metadata": {
     "scrolled": true
@@ -1293,16 +1293,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:62517\n"
+      "Launching server at http://localhost:62691\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<panel.io.server.Server at 0x19ea0d08090>"
+       "<panel.io.server.Server at 0x19ea2d3be90>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
